--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,16 +38,16 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
-    //Depedencias de Retrofit para implementacion de cliente para servicio REST
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:retrofit:convert-jackson:2.9.0'
-
-    //Implementamos la dependencia a las corutinas para conectarnos al back end
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
-
     // Because RxAndroid releases are few and far between, it is recommended you also
     // explicitly depend on RxJava's latest version for bug fixes and new features.
     // (see https://github.com/ReactiveX/RxJava/releases for latest 3.x.x version)
+
+
+    //Dependencias para uso de REST con Retrofit
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
     implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
